# kubecove

./: .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  CONTEXT.md  README.md  SECURITY.md  biome.json  components.json  context.md  design-preview-plan.html  doctor.config.json  index.html  package.json  react-doctor.config.json  research.md  tsconfig.json  vite.config.ts  vitest.config.ts
.githooks/: pre-commit-user
.github/: dependabot.yml
.serena/: project.yml
benchmarks/: command-palette.bench.ts  major-surfaces.bench.ts  resource-detail.bench.ts  resource-metrics.bench.ts  resource-table.bench.ts  sidebar-tree.bench.ts  topology.bench.ts  yaml-diff.bench.ts
docs/: README.md  agent-skills.md  architecture-blueprint.md  architecture-review-2026-07-10.md  browser-dev-mock-checklist.md  development-workflow.md  helm-reconciliation-design.md  milestones.md  pod-exec-design.md  product-inspiration.md  product-vision.md  release.md  shadcn-component-migration-notes.md  svelte-frontend-migration-plan.md  task-workflow.md  todos.md
e2e/: lifecycle.ts  wdio.fast.conf.ts  wdio.real.conf.ts
plans/: 002-error-boundary-and-transient-retry.md  README.md
scripts/: bump-version.ts  perf-frontend.ts  release-beta.ts  (+12 more)
src-tauri/: .gitignore  Cargo.toml  build.rs  tauri.conf.json  tauri.dev-kind.conf.json  tauri.e2e.conf.json
src-tauri/benches/: backend_hot_paths.rs
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  e2e.rs  lib.rs  main.rs
src-tauri/src/commands/: README.md  argo.rs  bench_support.rs  cancellation.rs  contexts.rs  diagnostics.rs  discovery.rs  events.rs  gitops_crd.rs  helm.rs  helpers.rs  incidents.rs  kubeconfig.rs  kubeconfig_clients.rs  live_sessions.rs  live_store.rs  live_store_tests.rs  metrics.rs  mod.rs  namespaces.rs  operations.rs  pod_exec.rs  rbac.rs  rbac_inventory.rs  rbac_review.rs  rbac_risk.rs  rbac_tests.rs  resources.rs  sessions.rs  streams.rs  usage.rs  usage_webview.rs  workspace_files.rs
src-tauri/src/commands/argo/: applications.rs  appprojects.rs  appsets.rs  comparison.rs  connected.rs  mod.rs  operations.rs  scope.rs  transport.rs
src-tauri/src/commands/flux/: mod.rs
src-tauri/src/commands/helm/: manifest.rs  mod.rs  reconciliation.rs  reconciliation_tests.rs  redaction.rs  storage.rs  storage_tests.rs  time.rs  values.rs
src-tauri/src/commands/helpers/: client_cache.rs  client_cache_tests.rs  client_cancellation.rs  health.rs  metadata.rs  serialization.rs  time.rs
src-tauri/src/commands/pod_exec/: registry.rs  runner.rs  tests.rs  validation.rs
src-tauri/src/commands/resources/: apply.rs  apply_client_tests.rs  details.rs  dynamic.rs  ingress_status.rs  kubeconform.rs  revisions.rs  scope.rs  summary.rs  summary_cluster.rs  summary_core.rs  summary_workloads.rs  topology.rs  topology_collection.rs  topology_dynamic.rs  topology_network.rs  topology_tests.rs  yaml.rs
src-tauri/src/commands/resources/apply/: execution.rs  linting.rs  validation.rs
src-tauri/src/commands/resources/details/: cluster.rs  core.rs  workloads.rs
src-tauri/src/commands/sessions/: registry.rs  runner.rs  service.rs  target.rs  tests.rs
src-tauri/src/commands/streams/: aggregate_logs.rs  kinds.rs  logs.rs  registry.rs  watch.rs
src-tauri/src/models/: README.md  argo.rs  cancellation.rs  cluster.rs  diagnostics.rs  discovery.rs  error.rs  events.rs  flux.rs  helm.rs  incidents.rs  metrics.rs  mod.rs  namespace.rs  operations.rs  rbac.rs  resource.rs  sessions.rs  streams.rs  usage.rs
src-tauri/tests/: app_error.rs  cluster_namespace_models.rs  list_kube_contexts.rs  list_namespaces.rs  resource_models.rs
(+655 files in other folders)
