[package]
name = "k8s-manager"
version = "0.1.0"
description = "A local desktop Kubernetes IDE"
authors = ["timpan"]
edition = "2021"

[lib]
name = "k8s_manager_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
kube = { version = "3.1.0", features = ["client", "derive"] }
k8s-openapi = { version = "0.27.1", features = ["v1_35"] }
serde_yaml = { package = "yaml_serde", version = "0.10.4" }
thiserror = "2.0.18"
chrono = "0.4"
futures-util = "0.3"
