[package]
name = "kubecove"
version = "0.7.1"
description = "A context-first desktop workspace for Kubernetes operations"
license = "AGPL-3.0-or-later"
authors = ["timpan"]
edition = "2021"

[lib]
name = "kubecove_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22.1"
flate2 = "1.1.9"
kube = { version = "4.0.0", features = ["client", "derive", "ws"] }
k8s-openapi = { version = "0.28.0", features = ["v1_35"] }
serde_yaml = { package = "yaml_serde", version = "0.10.4" }
thiserror = "2.0.18"
chrono = "0.4"
futures-util = "0.3"
tokio = { version = "1", features = ["io-util", "macros", "net", "process", "rt", "time"] }
tokio-util = "0.7.18"
sysinfo = { version = "0.39.5", default-features = false, features = ["system"] }
tauri-plugin-updater = "2.10.1"
tauri-plugin-process = "2.3.1"
tauri-plugin-dialog = "2.7.1"

[dev-dependencies]
http = "1"
proptest = "1.11.0"
tower-test = "0.4"
