[package]
name = "kubecove"
version = "0.9.1"
description = "A context-first desktop workspace for Kubernetes operations"
license = "AGPL-3.0-or-later"
authors = ["timpan"]
edition = "2021"

[features]
bench-support = []
e2e = ["dep:tauri-plugin-wdio", "dep:tauri-plugin-wdio-webdriver"]

[lib]
name = "kubecove_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22.1"
flate2 = "1.1.9"
kube = { version = "4.0.0", features = ["client", "derive", "ws"] }
k8s-openapi = { version = "0.28.0", features = ["v1_35"] }
serde_yaml = { package = "yaml_serde", version = "0.10.4" }
thiserror = "2.0.18"
chrono = "0.4"
futures-util = "0.3"
tokio = { version = "1", features = ["io-util", "macros", "net", "process", "rt", "time"] }
tokio-util = "0.7.18"
tower = { version = "0.5.3", features = ["util"] }
http = "1"
sysinfo = { version = "0.39.5", default-features = false, features = ["system"] }
tauri-plugin-updater = "2.10.1"
tauri-plugin-process = "2.3.1"
tauri-plugin-dialog = "2.7.1"
tauri-plugin-wdio = { version = "=1.2.0", optional = true }
tauri-plugin-wdio-webdriver = { version = "=1.2.0", optional = true }
reqwest = { version = "0.13.4", default-features = false, features = ["json", "rustls-no-provider", "http2"] }
keyring = "4.1.5"
uuid = { version = "1.24.0", features = ["v4"] }

[dev-dependencies]
codspeed-divan-compat = "5.0.1"
divan = { package = "codspeed-divan-compat-walltime", version = "5.0.1" }
proptest = "1.11.0"
tower-test = "0.4"

[[bench]]
name = "backend_hot_paths"
harness = false
required-features = ["bench-support"]
